--- a/app/views/competitions/disciplines/show.html.haml
+++ b/app/views/competitions/disciplines/show.html.haml
@@ -18,6 +18,8 @@
     = card('Aktionen') do |card|
       - card.body do
         .d-grid.gap-2
+          = btn_link_to 'Übersicht', { action: :index }
+          %hr
           = btn_link_to 'Bearbeiten', { action: :edit }
           - if @discipline.destroy_possible?
             = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Disziplin wirklich löschen?' }
