--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -30,8 +30,10 @@
     margin-left: 0.25rem
 
 .card > .table
+  margin-top: 1rem
+  
   tr:last-child
-    td
+    td, th
       border-bottom-width: 0
 
 .list-competitions
