--- a/spec/fixtures/views/User_GET_users_confirmation_new_renders_form/view.html
+++ b/spec/fixtures/views/User_GET_users_confirmation_new_renders_form/view.html
@@ -15,10 +15,10 @@
 <a class='navbar-brand' href='/' title='Startseite'>
 <img src="/assets/logo.png" />
 </a>
-<button aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Menü anzeigen' class='navbar-toggler' data-bs-target='#navbarSupportedContent' data-bs-toggle='collapse' type='button'>
+<button aria-controls='navbar-supported-content' aria-expanded='false' aria-label='Menü anzeigen' class='navbar-toggler' data-bs-target='#navbar-supported-content' data-bs-toggle='collapse' type='button'>
 <span class='navbar-toggler-icon'></span>
 </button>
-<div class='collapse navbar-collapse' id='navbarSupportedContent'>
+<div class='collapse navbar-collapse' id='navbar-supported-content'>
 <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
 <li class='nav-item'>
 <a class="nav-link" href="/competitions/new">Wettkampf anlegen</a>
