--- a/app/assets/stylesheets/_bootstrap-variables.scss
+++ b/app/assets/stylesheets/_bootstrap-variables.scss
@@ -298,14 +298,14 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-200 !default;
-$dark:          $gray-900 !default;
+$primary:       #79b2cf !default;
+$secondary:     #71C5E4 !default;
+$success:       #5ab076 !default;
+$info:          #2880b7!default;
+$warning:       #d7a03e !default;
+$danger:        #f44336 !default;
+$light:         #FAF7F7 !default;
+$dark:          #7F9CC0 !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
