--- a/app/views/application/_nav_menu.haml
+++ b/app/views/application/_nav_menu.haml
@@ -28,6 +28,8 @@
               = active_link_to(Band.model_name.human(count: :many), competition_bands_path, class: 'dropdown-item')
             %li
               = active_link_to(Assessment.model_name.human(count: :many), competition_assessments_path, class: 'dropdown-item')
+            %li
+              = active_link_to(Certificates::Template.model_name.human(count: :many), competition_certificates_templates_path, class: 'dropdown-item')
   - else
     %ul.navbar-nav.me-auto.mb-2.mb-lg-0
       %li.nav-item
