--- a/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-new-error/view.html
@@ -75,7 +75,7 @@
 <div class="form-group my-2 select required assessment_band form-group-invalid"><label class="control-label select required" for="assessment_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select is-invalid select required" aria-invalid="true" name="assessment[band_id]" id="assessment_band_id"><option value="" label=" "></option>
 <option value="UUID">Frauen</option>
 <option value="UUID">Männer</option></select><div class="invalid-feedback">Band muss ausgefüllt werden</div></div>
-<div class="form-group my-2 string optional assessment_name form-group-valid"><label class="control-label string optional" for="assessment_name">Name</label><input class="form-control string optional" type="text" value="Foo" name="assessment[name]" id="assessment_name" /></div>
+<div class="form-group my-2 string optional assessment_forced_name form-group-valid"><label class="control-label string optional" for="assessment_forced_name">Name</label><input class="form-control string optional" type="text" value="Foo" name="assessment[forced_name]" id="assessment_forced_name" /></div>
 
 </div>
 <div class='card-footer d-flex justify-content-end'><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Wertung erstellen</button>
