--- a/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-show/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Wertung:  - MV-Cup - 29.02.2024 - Feuerwehrsport</title>
+<title>Wertung: Löschangriff nass - Frauen - MV-Cup - 29.02.2024 - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -63,14 +63,15 @@
 <div class='alert-flash'>
 </div>
 </div>
-<div class='mt-3 container'><h1>Wertung: </h1>
+<div class='mt-3 container'><h1>Wertung: Löschangriff nass - Frauen</h1>
 <div class='row'>
 <div class='col-md-8'>
 <div class='card mb-3'>
+<div class='card-header'>Löschangriff nass - Frauen</div>
 <table class='table'>
 <tr>
 <th>Name</th>
-<td></td>
+<td>Löschangriff nass - Frauen</td>
 </tr>
 <tr>
 <th>Disziplin</th>
