--- a/app/views/competitions/assessments/_form.html.haml
+++ b/app/views/competitions/assessments/_form.html.haml
@@ -1,7 +1,7 @@
 - card.body do
   = f.association :discipline, collection: @competition.disciplines
   = f.association :band, collection: @competition.bands
-  = f.input :name
+  = f.input :forced_name
 - card.actions do
   = f.primary_button :submit
   = f.cancel_button(competition_bands_path)
