Exports und Tests ergänzen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -26,6 +26,9 @@
     margin-left: -1.5rem
     display: block
 
+.form-group.hidden
+  display: none
+
 .btn-toolbar, .card-footer
   input[type=submit] + a, button + a
     margin-left: 0.25rem
