--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -7,8 +7,15 @@
 @import social_share_buttons
 @import certificates
 
-.navbar-brand img
-  width: 2rem
+.navbar-brand
+  padding-block: 0
+
+  img
+    width: 2rem
+
+.page-header
+  @extend .text-bg-dark
+  padding-block: 2rem 3rem
 
 .stretched-links-row
   @extend .row
