--- a/app/views/home/_info_card.html.haml
+++ b/app/views/home/_info_card.html.haml
@@ -1,6 +1,7 @@
-.card
+.card.text-bg-light
+  = image_tag 'ambiance/blurred-01.jpg', class: 'card-img-top'
   .card-header
-    %h2.display-4 feusport.de
+    %h2 feusport.de
     %p.lead Was ist das?
 
   .card-body
