--- a/app/views/home/_development_card.html.haml
+++ b/app/views/home/_development_card.html.haml
@@ -1,4 +1,5 @@
-.card.mt-2
+.card
+  = image_tag 'ambiance/blurred-02.jpg', class: 'card-img-top'
   .card-header
     %h2.display-4 Entwicklung
     %p.lead Was steckt dahinter?
