--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -2,10 +2,11 @@
 
 - content_for :page_header do
   %h1 Willkommen auf feusport.de
+  %p.lead.mb-0 Dein Portal für Feuerwehrsport-Wettkämpfe
 
-.row
-  .col-lg-6.pb-4
+.row.g-4
+  .col-lg-7.col-xl-8
     = render('competitions_card', competitions: Competition.all.upcoming)
 
-  .col-lg-6.pb-4
+  .col-lg-5.col-xl-4
     = render('info_card')
