--- a/app/views/home/info.html.haml
+++ b/app/views/home/info.html.haml
@@ -1,8 +1,10 @@
-- page_title('Über feusport.de')
+- content_for :page_header do
+  = page_title('Über feusport.de')
 
-.row
-  .col-lg-6.pb-4
+
+.row.g-4
+  .col-lg-6
     = render('info_card')
-    = render('development_card')
-  .col-lg-6.pb-4
+    .mt-4= render('development_card')
+  .col-lg-6
     = render('impressum_card')
