--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -1,14 +1,15 @@
+= render 'competitions/header', competition: @competition
 
-.row
-  .col-md-8.mb-2
+.row.g-4
+  .col-lg-6.col-xl-8
     .card
       .card-header
-        = page_title(@competition.name, class: 'display-3')
-        %p.lead #{l @competition.date} - #{@competition.locality}
+        = page_title(@competition.name)
+        %p.lead.mb-0 #{l @competition.date} - #{@competition.locality}
       .card-body
         != @competition.description_html
-  .col-md-4.mb-2
-    .card
+  .col-lg-6.col-xl-4
+    .card.text-bg-light
       - unless @competition.visible?
         .card-header.text-bg-warning
           .d-grid.gap-2.col-10.mx-auto
@@ -16,7 +17,7 @@
               .far.fa-eye-slash
               Nicht öffentlich sichtbar
             = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
-      .card-body
+      .card-header
         .d-grid.gap-2.col-10.mx-auto
           - if can?(:edit, @competition)
             = link_to 'Bearbeiten', edit_competition_editing_path, class: 'btn btn-light btn-sm'
@@ -28,7 +29,7 @@
           - if can?(:edit, @competition)
             %hr
             = link_to 'Disziplinen', competition_disciplines_path, class: 'btn btn-light btn-sm'
-      .card-footer.text-center.p-0.pt-3
+      .card-body.text-center.p-0.pt-3
         %pre.small= link_to(competition_show_url.gsub(%r{https?://}, ''), competition_show_url)
         = image_tag qrcode(competition_show_url)
 
