Danger-Alert umgestalten

--- a/app/assets/stylesheets/bootstrap/_bootstrap.sass
+++ b/app/assets/stylesheets/bootstrap/_bootstrap.sass
@@ -5,8 +5,8 @@
 // scss-docs-start import-stack
 // Configuration
 @import bootstrap/scss/functions
-@import ./bootstrap-variables
-@import ./bootstrap-variables-dark
+@import ./variables
+@import ./variables-dark
 @import bootstrap/scss/maps
 @import bootstrap/scss/mixins
 @import bootstrap/scss/utilities
