--- a/app/assets/stylesheets/bootstrap/_variables.scss
+++ b/app/assets/stylesheets/bootstrap/_variables.scss
@@ -303,7 +303,7 @@ $secondary:     #6e6967 !default;
 $success:       #1b974c !default;
 $info:          #6d919b !default;
 $warning:       #e5c51e !default;
-$danger:        #ed0e2a !default;
+$danger:        #993441 !default;
 $light:         #d7dee0 !default;
 $dark:          #40485e !default;
 $accent1:       #233844;
@@ -333,7 +333,7 @@ $secondary-text-emphasis: shade-color($secondary, 60%) !default;
 $success-text-emphasis:   shade-color($success, 60%) !default;
 $info-text-emphasis:      shade-color($info, 60%) !default;
 $warning-text-emphasis:   shade-color($warning, 60%) !default;
-$danger-text-emphasis:    shade-color($danger, 60%) !default;
+$danger-text-emphasis:    $white !default;
 $light-text-emphasis:     $gray-700 !default;
 $dark-text-emphasis:      $gray-700 !default;
 // scss-docs-end theme-text-variables
@@ -344,7 +344,7 @@ $secondary-bg-subtle:     tint-color($secondary, 80%) !default;
 $success-bg-subtle:       tint-color($success, 80%) !default;
 $info-bg-subtle:          tint-color($info, 80%) !default;
 $warning-bg-subtle:       tint-color($warning, 80%) !default;
-$danger-bg-subtle:        tint-color($danger, 80%) !default;
+$danger-bg-subtle:        $danger !default;
 $light-bg-subtle:         mix($gray-100, $white) !default;
 $dark-bg-subtle:          $gray-400 !default;
 // scss-docs-end theme-bg-subtle-variables
@@ -355,7 +355,7 @@ $secondary-border-subtle: tint-color($secondary, 60%) !default;
 $success-border-subtle:   tint-color($success, 60%) !default;
 $info-border-subtle:      tint-color($info, 60%) !default;
 $warning-border-subtle:   tint-color($warning, 60%) !default;
-$danger-border-subtle:    tint-color($danger, 60%) !default;
+$danger-border-subtle:    tint-color($danger, 10%) !default;
 $light-border-subtle:     $gray-200 !default;
 $dark-border-subtle:      $gray-500 !default;
 // scss-docs-end theme-border-subtle-variables
@@ -1548,7 +1548,7 @@ $alert-padding-x:               $spacer !default;
 $alert-margin-bottom:           1rem !default;
 $alert-border-radius:           var(--#{$prefix}border-radius) !default;
 $alert-link-font-weight:        $font-weight-bold !default;
-$alert-border-width:            var(--#{$prefix}border-width) !default;
+$alert-border-width:            0 !default;
 $alert-bg-scale:                -80% !default;
 $alert-border-scale:            -70% !default;
 $alert-color-scale:             40% !default;
