--- a/app/views/competitions/people/index.html.haml
+++ b/app/views/competitions/people/index.html.haml
@@ -1,4 +1,4 @@
-- page_title(resource_class.model_name.human(count: :many))
+= render 'competitions/header', competition: @competition
 
 .row
   .col-md-8
