--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -1,4 +1,4 @@
-= render 'competitions/header', competition: @competition
+= render 'competitions/header', competition: @competition, resource_class: nil
 
 .row.g-4
   .col-lg-6.col-xl-8
