Darstellung von Index-Actions überarbeiten

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -107,6 +107,14 @@
     td, th
       border-bottom-width: 0
 
+.card-primary-action
+  @extend .btn, .btn-primary
+  border-radius: 0
+  line-height: 2
+
+  > .far
+    margin-left: 0.25rem
+
 .disciplines-icon-bar
   display: flex
   align-items: center
