--- a/app/views/application/_card.html.haml
+++ b/app/views/application/_card.html.haml
@@ -1,12 +1,19 @@
 .card{ class: card.options[:class] }
-  - if card.title.present? || card.header.present?
-    .card-header= card.title.presence
+  - if card.title.present?
+    .card-header.p-0
+      .d-flex.justify-content-between
+        %h4.m-0.py-2.ps-3= card.title
+        - card.primary_actions.each do |action|
+          = render 'nav_link', link: action, a_class: 'card-primary-action'
   - if card.direct.present?
     = card.direct.try(:html_safe)
   - if card.body.present?
     .card-body
       = card.body.try(:html_safe)
   - if card.actions.present?
-    .card-footer.d-flex.justify-content-end= card.actions
+    .card-footer.d-flex.justify-content-end
+      .btn-group
+        - card.actions.each do |action|
+          = render 'nav_link', link: action, a_class: 'btn btn-secondary btn-sm'
   - elsif card.footer.present?
     .card-footer= card.footer
